--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sh 'mvn clean verify sonar:sonar'
-sonar.projectKey=radical
+sonar.projectKey=radical12
 sonar.projectVersion=1.0
 sonar.sources=src/main/java
 sonar.sourceEncoding=UTF-8
